# AtChat

./: .gitignore  CLAUDE.md  CMakeLists.txt  FLUENTUI_COMPONENTS.md  IMPLEMENTATION_SUMMARY.md  MESSAGE_FIX.md  Main.qml  TEMP_SESSION_AND_FRIEND_FIX.md  WEBSOCKET_CONNECTION_FIX.md  WEBSOCKET_DEBUG.md  WEBSOCKET_TEST.md  main.cpp  resource.qrc  开发进度评估.md  设计.md
qml/: AppMainWindow.qml
qml/component/: AddFriendDialog.qml  ChatNotification.qml  EmojiPicker.qml  LoginRequired.qml
qml/global/: GlobalModel.qml  ItemsFooter.qml  ItemsOriginal.qml
qml/page/: ChatPage.qml  ContactsPage.qml  FriendRequestsPage.qml  LoginPage.qml  ProfilePage.qml  Settings.qml
qml/window/: AboutWindow.qml
src/: AppInfo.cpp  AppInfo.h  LicenseManager.cpp  LicenseManager.h  NetworkManager.cpp  NetworkManager.h  Version.h
tools/KeyGenerator/: CMakeLists.txt  main.cpp
